<resources>
    <string name="app_name">梦想音乐</string>

    <string name="text_navigation_drawer_open">Open navigation drawer</string>
    <string name="text_navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">梦想为帆·Android</string>

<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> create
    <string name="home_history_play_text">历史最多播放</string>
    <string name="home_play_text">播放</string>
    <string name="home_play_times_text">次</string>
    <string name="home_play_number_text">2</string>
    <string name="home_see_more_text">查看更多</string>
    <string name="home_created_song_list_text">创建的歌单(2)</string>
    <string name="home_new_song_list_text">新建</string>
    <string name="home_my_song_list_text">我的歌单</string>
    <string name="home_favorite_music_text">收藏喜欢的歌曲</string>
    <string name="home_favorite_music_number_text">0首</string>
    <string name="home_item_all_music_text">全部歌曲</string>
    <string name="home_item_my_favorite_text">我的收藏</string>
    <string name="home_item_recent_release_text">最近播放</string>
<<<<<<< HEAD
=======
=======
    <string name="history_play_text">历史最多播放</string>
    <string name="play_text">播放</string>
    <string name="play_times_text">次</string>
    <string name="play_number_text">2</string>
    <string name="see_more_text">查看更多</string>
    <string name="created_song_list_text">创建的歌单(2)</string>
    <string name="new_song_list_text">新建</string>
    <string name="my_song_list_text">我的歌单</string>
    <string name="favorite_music_text">收藏喜欢的歌曲</string>
    <string name="favorite_music_number_text">0首</string>
    <string name="all_music_text">全部歌曲</string>
    <string name="my_favorite_text">我的收藏</string>
    <string name="recent_release_text">最近播放</string>


    <string name="number_one_singer_name">林俊杰</string>
    <string name="number_one_song_name">Always Online</string>
    <string name="number_one_song_duration_time">03:46</string>

    <string name="number_two_song_name">体面</string>
    <string name="number_two_singer_name">于文文</string>

    <string name="number_three_song_name">说散就散</string>
    <string name="number_three_singer_name">袁娅维</string>

    <string name="history_number_text">3次</string>
    <string name="history_play_time_most_text">播放次数最多的10首歌</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
>>>>>>> commit
>>>>>>> create
</resources>
