<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/ghostwhite"
    android:layout_marginTop="?attr/actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp">

        <ImageView
            android:id="@+id/home_vertical_line"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_vertical_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_play_text"
            app:layout_constraintTop_toTopOf="@id/home_vertical_line"
            app:layout_constraintStart_toEndOf="@id/home_vertical_line"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/home_history_image_view"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:srcCompat="@mipmap/background_horizontal_06"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/home_play_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_text"
            android:paddingTop="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            />
        <TextView
            android:id="@+id/home_play_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_number_text"
            app:layout_constraintTop_toTopOf="@id/home_play_text_view"
            app:layout_constraintStart_toEndOf="@id/home_play_text_view"
            android:layout_marginStart="4dp"
            android:textColor="@color/red_700"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:id="@+id/home_play_times_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/play_times_text"
            app:layout_constraintTop_toTopOf="@id/home_play_text_view"
            app:layout_constraintStart_toEndOf="@id/home_play_number_text_view"
            android:layout_marginStart="4dp"
            />
        <TextView
            android:id="@+id/home_see_more_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/see_more_text"
            app:layout_constraintTop_toTopOf="@id/home_play_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/horizontal_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <RelativeLayout
            android:id="@+id/home_item_all_music"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                    <ImageView
                        android:id="@+id/home_item_all_music_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/background_vertical_01"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        />
                    <RelativeLayout
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_template"
                        android:backgroundTint="@color/gray"
                        android:gravity="center"
                        android:layout_alignEnd="@id/home_item_all_music_image_view"
                        android:layout_alignTop="@id/home_item_all_music_image_view">
                        <TextView
                            android:id="@+id/home_item_all_music_number_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="@color/white"/>
                    </RelativeLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/all_music_text"
                    android:gravity="center"
                    android:background="@color/lightgrey"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/home_item_recent_release"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/home_item_all_music"
            app:layout_constraintStart_toEndOf="@id/home_item_all_music"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                    <ImageView
                        android:id="@+id/home_item_recent_release_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/background_horizontal_03"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        />
                    <RelativeLayout
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_template"
                        android:backgroundTint="@color/gray"
                        android:gravity="center"
                        android:layout_alignEnd="@id/home_item_recent_release_image_view"
                        android:layout_alignTop="@id/home_item_recent_release_image_view">
                        <TextView
                            android:id="@+id/home_item_recent_release_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/two"
                            android:textColor="@color/white"/>
                    </RelativeLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/recent_release_text"
                    android:gravity="center"
                    android:background="@color/lightgrey"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/home_item_my_favorite"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/home_item_recent_release"
            app:layout_constraintStart_toEndOf="@id/home_item_recent_release">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                    <ImageView
                        android:id="@+id/home_item_my_favorite_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/background_horizontal_01"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        />
                    <RelativeLayout
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_template"
                        android:backgroundTint="@color/gray"
                        android:gravity="center"
                        android:layout_alignEnd="@id/home_item_my_favorite_image_view"
                        android:layout_alignTop="@id/home_item_my_favorite_image_view">
                        <TextView
                            android:id="@+id/home_item_my_favorite_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/three"
                            android:textColor="@color/white"/>
                    </RelativeLayout>

                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/my_favorite_text"
                    android:gravity="center"
                    android:background="@color/lightgrey"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>